--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wellcome to ABC Cinema</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
         body {
             font-family: 'Poppins', sans-serif;
+            background-color: #9E9E9E;
         }
 
         .navbar {
             background-color: black;
+            height: 90px;
+            font-size: 18px;
         }
 
         .navbar-nav .nav-link {
@@ -63,35 +71,140 @@
         </div>
     </nav>
     <!-- Navbar -->
-     
+
     <!-- Carousel -->
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/consumed-06-11-2024-01-56-03-985.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/amaran-03-11-2024-12-02-06-514.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/consumed-06-11-2024-01-56-03-985.jpg" class="d-block w-100" alt="...">
-          </div>
+            <div class="carousel-item active">
+                <img src="images/consumed-06-11-2024-01-56-03-985.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/amaran-03-11-2024-12-02-06-514.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/consumed-06-11-2024-01-56-03-985.jpg" class="d-block w-100" alt="...">
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
     <!-- Carousel -->
 
+    <!-- Card Carousel -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <div class="container">
+        <h1 class="text-center fw-bold display-3">Top <span style="color: #D4AF37;">Movies</span></h1>
+
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <div class="card">
+                    <img src="./images/venom.jpg" alt="" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">VENOM: THE LAST DANCE</div>
+                        <div class="card-body text-center">
+                            <a href="#" class="card-link" style="text-decoration: underline;">MORE INFO</a>
+                        </div>
+                        <a href="#" class="btn btn-primary">Buy Ticket</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img src="./images/redone.jpg" alt="" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">RED ONE</div>
+                        <div class="card-body text-center">
+                            <a href="#" class="card-link" style="text-decoration: underline;">MORE INFO</a>
+                        </div>
+                        <a href="#" class="btn btn-primary">Buy Ticket</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img src="./images/bb3.jpg" alt="" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">BHOOL BHULAIYAA 3</div>
+                        <div class="card-body text-center">
+                            <a href="#" class="card-link" style="text-decoration: underline;">MORE INFO</a>
+                        </div>
+                        <a href="#" class="btn btn-primary">Buy Ticket</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img src="./images/singam3.jpg" alt="" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">SINGHAM AGAIN (HINDI)</div>
+                        <div class="card-body text-center">
+                            <a href="#" class="card-link" style="text-decoration: underline;">MORE INFO</a>
+                        </div>
+                        <a href="#" class="btn btn-primary">Buy Ticket</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img src="./images/amaran.jpg" alt="" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">AMARAN (TAMIL)</div>
+                        <div class="card-body text-center">
+                            <a href="#" class="card-link" style="text-decoration: underline;">MORE INFO</a>
+                        </div>
+                        <a href="#" class="btn btn-primary">Buy Ticket</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img src="./images/IT ENDS WITH US.jpg" alt="" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">IT ENDS WITH US</div>
+                        <div class="card-body text-center">
+                            <a href="#" class="card-link" style="text-decoration: underline;">MORE INFO</a>
+                        </div>
+                        <a href="#" class="btn btn-primary">Buy Ticket</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Card Carousel -->
+
+    <br>
+    <br>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script>
+        $('.owl-carousel').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            autoplay: true,
+            autoplayTimeout: 2500,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 3
+                },
+                1000: {
+                    items: 4
+                }
+            }
+        })
+    </script>
 </body>
 
 </html>
